# reconotes

./: .gitignore  BACKEND_THROTTLING_FIXES.md  BAR_CHART_READY.md  CHANGES_SUMMARY.md  CLOCKWORK_UI_UPDATES.md  Cargo.toml  FINAL_VERIFICATION.md  FIXES_IMPLEMENTATION.md  FREQUENCY_FIX_SUMMARY.md  FRONTEND_PERFORMANCE_VERIFIED.md  FRONTEND_VERIFICATION_REPORT.md  INTEGRATION_COMPLETE.md  ISSUES_FIXED_SUMMARY.md  LOG_ANALYSIS_GUIDE.md  MULTI_NOTE_DISPLAY.md  Makefile.toml  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PIANO_VISUALIZATION_UPDATE.md  README.md  ROOT_CAUSE_FOUND.md  SLIDING_WINDOW_SUCCESS.md  TESTING_AND_VERIFICATION.md  TESTING_GUIDE.md  UI_LAYOUT_REDESIGN.md  VERIFICATION_REPORT.md  WORKSPACE.md  build.bat  build.ps1  build.rs  build.sh  clippy.toml  run.bat  run.ps1  run.sh  test_440hz.ps1  test_note_detection.ps1  test_scoring.py  timing_test.py  voice_recorder_fft.py
.github/chatmodes/: haiku-4.5.chatmode.md
.github/workflows/: rust.yml
docs/: INDEX.md  OptimizeMemory.md  PROJECT_SUMMARY.md  README.md  README_COMPLETION.md
docs/architecture/: FFT_IMPLEMENTATION.md  FREQUENCY_CONVERSION_BUG_FIX.md  SLIDING_WINDOW_IMPLEMENTATION.md  SLIDING_WINDOW_USAGE.md  VERSION_2_SUMMARY.md
docs/guides/: 00_START_HERE.md  BAR_CHART_VISUALIZATION.md  DEVELOPMENT.md  PIANO_KEYBOARD_QUICKSTART.md  QUICKSTART.md  QUICK_REFERENCE.md  TEST_INSTRUCTIONS.md
docs/reports/: GUI_BACKEND_DEBUG_ANALYSIS.md  LATENCY_INVESTIGATION.md  PERFORMANCE_SUMMARY.txt  STRESS_TEST_RESULTS.md
recognotes-desktop-gui/: AUDIO_FORMAT_FIXES.md  BUILD_COMPLETE.md  Cargo.toml  FIXES_APPLIED.md  TIMESTAMP_FIX.md  build.rs
recognotes-desktop-gui/src/: audio.rs  backend_client.rs  main.rs  ui.rs  visualization.rs
recognotes-rust-backend/: .gitignore  Cargo.toml  IMPLEMENTATION_COMPLETE.md  O grave.m4a  QUICKSTART.md  build.rs  demo-fft.ps1  test-api.ps1
recognotes-rust-backend/src/: audio_analyzer.rs  main.rs  models.rs  utils.rs
recognotes-rust-backend/src/endpoints/: analyze.rs  health.rs  last_result.rs  mod.rs
tests/: README.md
tests/backend/: analyze_confidence.py  stress_test_backend_fast.py
tests/frontend/: test_frontend_performance.rs
tests/integration/: test_all_notes.py  test_scoring.py
