[package]
name = "recognotes-desktop-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = "0.28"
egui = "0.28"

# Audio recording
cpal = "0.13"
ringbuf = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Encoding
base64 = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = "0.4"
parking_lot = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"
