[package]
name = "recognotes-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
log = "0.4"
env_logger = "0.11"

# Audio processing
hound = "3.5"
rustfft = "6.1"
num-complex = "0.4"
ndarray = "0.15"

# Utilities
once_cell = "1.19"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
